<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="x"
            type="com.example.shoestore_starter.viewmodels.VM_Login" />
    </data>

    <!-- ConstraintLayout is the best choice here as there are number of views where I can put
    them easily in the screen and easily to modify their places later with one move -->
    <!-- I used ScrollView so when the user use the keyboard, he could scroll -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fragment_horizontal_margin"
            android:paddingTop="@dimen/fragment_vertical_margin"
            android:paddingRight="@dimen/fragment_horizontal_margin"
            android:paddingBottom="@dimen/fragment_vertical_margin"
            tools:context=".ui.fragments.F_Login">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="216dp"
                android:text="@string/email"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/example_com"
                android:inputType="textEmailAddress"
                android:text="@{x.email}"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="36dp"
                android:text="@string/password"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/example_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@{x.password}"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/action_sign_in_short"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintVertical_bias="0.162" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="210dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintVertical_bias="0.733" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>

<!--android:imeActionLabel="@string/action_sign_in_short"-->
<!--                android:text="@={x.email}"
                android:text="@={x.password}"

-->